--- a/quartz/pom.xml
+++ b/quartz/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>lombok</artifactId>
 			<version>1.16.20</version>
 		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
 
 	</dependencies>
 
