--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>quartz</module>
+        <module>activiti</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -24,6 +25,16 @@
                 <groupId>com.yjs.springdemo</groupId>
                 <artifactId>quartz</artifactId>
                 <version>${springdemo.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
