--- a/controller/src/main/resources/application.yml
+++ b/controller/src/main/resources/application.yml
@@ -4,3 +4,10 @@ spring:
     url: jdbc:mysql://localhost:3306/Ivan
     username: root
     password: imcoming4412
+
+rabbitmq:
+  host: 127.0.0.1
+  port: 5672
+  virtualhost: /
+  username: ivan4412
+  password: imcoming4412
