--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>domain</module>
         <module>controller</module>
         <module>service</module>
+        <module>jvm</module>
     </modules>
     <packaging>pom</packaging>
 
