--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>controller</module>
         <module>service</module>
         <module>jvm</module>
+        <module>java8</module>
     </modules>
     <packaging>pom</packaging>
 
