--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,10 @@
         <module>java8</module>
         <module>spring</module>
         <module>cache</module>
+        <module>oauth2</module>
+        <module>saToken</module>
+        <module>saTokenClient</module>
+        <module>saTokenClient2</module>
     </modules>
     <packaging>pom</packaging>
 
