--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>saToken</module>
         <module>saTokenClient</module>
         <module>saTokenClient2</module>
+        <module>thread</module>
     </modules>
     <packaging>pom</packaging>
 
