根据json自动生成dto

--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>saTokenClient</module>
         <module>saTokenClient2</module>
         <module>thread</module>
+        <module>json2java</module>
     </modules>
     <packaging>pom</packaging>
 
