--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,6 @@
         <module>service</module>
         <module>jvm</module>
         <module>java8</module>
-        <module>spring</module>
         <module>cache</module>
         <module>oauth2</module>
         <module>saToken</module>
@@ -24,13 +23,15 @@
         <module>thread</module>
         <module>json2java</module>
         <module>translate</module>
+        <module>feign</module>
+        <module>feignClient</module>
     </modules>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.1.RELEASE</version>
+        <version>2.3.12.RELEASE</version>
     </parent>
 
     <dependencyManagement>
