--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <module>controller</module>
         <module>service</module>
         <module>jvm</module>
-        <module>java8</module>
+        <module>javaDemo</module>
         <module>cache</module>
         <module>oauth2</module>
         <module>saToken</module>
@@ -78,10 +78,8 @@
             <dependency>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
-                <version>1.16.20</version>
+                <version>1.18.10</version>
             </dependency>
-
-
 
         </dependencies>
 
